Optimise the system