@@ -36,112 +36,92 @@ public class ExcelParserService implements FileParserService {
 
     @Override
     public boolean supports(String mimeType) {
-        return "application/vnd.ms-excel".equals(mimeType) ||
-               "application/vnd.openxmlformats-officedocument" +
-               ".spreadsheetml.sheet".equals(mimeType) ||
-               "application/x-tika-ooxml".equals(mimeType);
+        return Set.of(
+                "application/vnd.ms-excel",
+                "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
+                "application/x-tika-ooxml"
+        ).contains(mimeType);
     }
 
-    /**
-     * Returns multiple ParsedFileData — one per sheet.
-     * FileIngestionOrchestrator calls parseAllSheets() now.
-     */
     @Override
-    public ParsedFileData parse(MultipartFile file,
-                                String tableName) throws IOException {
-        // Legacy — parse first sheet only
-        // Used internally when single sheet needed
+    public ParsedFileData parse(MultipartFile file, String tableName) throws IOException {
         List<ParsedFileData> all = parseAllSheets(file);
         return all.isEmpty() ? null : all.get(0);
     }
 
-    /**
-     * Parse ALL sheets — main method for multi-sheet support.
-     */
-    public List<ParsedFileData> parseAllSheets(
-            MultipartFile file) throws IOException {
+    public List<ParsedFileData> parseAllSheets(MultipartFile file) throws IOException {
 
-        log.info("Parsing Excel: {}", file.getOriginalFilename());
+        String originalFileName = Optional.ofNullable(file.getOriginalFilename())
+                .orElse("unknown_file");
 
-        String mimeType = detectSubtype(file.getOriginalFilename());
-        Workbook workbook = openWorkbook(file, mimeType);
-        String fileType = mimeType.contains("ms-excel")
-                ? "XLS" : "XLSX";
-        String baseFileName = file.getOriginalFilename()
-                .replaceAll("\\.[^.]+$", "");
+        log.info("Parsing Excel: {}", originalFileName);
+
+        String mimeType = detectSubtype(originalFileName);
+        String baseFileName = stripExtension(originalFileName);
+        String fileType = mimeType.contains("ms-excel") ? "XLS" : "XLSX";
 
         List<ParsedFileData> results = new ArrayList<>();
 
-        try {
+        try (Workbook workbook = openWorkbook(file, mimeType)) {
+
             int sheetCount = workbook.getNumberOfSheets();
             log.info("Excel has {} sheet(s)", sheetCount);
 
             for (int i = 0; i < sheetCount; i++) {
+
                 Sheet sheet = workbook.getSheetAt(i);
                 String sheetName = sheet.getSheetName();
 
-                log.info("Parsing sheet {}/{}: '{}'",
-                        i + 1, sheetCount, sheetName);
-
-                // Skip hidden or empty sheets
-                if (workbook.isSheetHidden(i) ||
-                    workbook.isSheetVeryHidden(i)) {
-                    log.info("Skipping hidden sheet: '{}'",
-                            sheetName);
+                if (shouldSkipSheet(workbook, sheet, i)) {
+                    log.info("Skipping sheet: '{}'", sheetName);
                     continue;
                 }
 
-                if (isSheetEmpty(sheet)) {
-                    log.info("Skipping empty sheet: '{}'",
-                            sheetName);
-                    continue;
-                }
-
-                // Table name = filename_sheetname
-                // e.g., employees_q1_data
                 String tableName = TableNameSanitizer.sanitize(
-                    baseFileName + "_" + sheetName);
+                        baseFileName + "_" + sheetName
+                );
 
-                ParsedFileData sheetData = parseSheet(
-                    sheet, file.getOriginalFilename(),
-                    fileType, tableName, sheetName);
+                ParsedFileData parsed = parseSheet(
+                        sheet, originalFileName, fileType, tableName, sheetName
+                );
 
-                if (sheetData != null &&
-                    !sheetData.getRows().isEmpty()) {
-                    results.add(sheetData);
+                if (isValid(parsed)) {
+                    results.add(parsed);
+
                     log.info(
-                        "Sheet '{}' → table '{}': {} rows, {} cols",
-                        sheetName, tableName,
-                        sheetData.getRows().size(),
-                        sheetData.getColumns().size());
+                            "Sheet '{}' → table '{}': {} rows, {} cols",
+                            sheetName, tableName,
+                            parsed.getRows().size(),
+                            parsed.getColumns().size()
+                    );
                 }
             }
-        } finally {
-            workbook.close();
         }
 
-        log.info("Excel parsing complete: {} valid sheets",
-                results.size());
+        log.info("Excel parsing complete: {} valid sheets", results.size());
         return results;
     }
 
-    private ParsedFileData parseSheet(Sheet sheet,
-            String originalFileName, String fileType,
-            String tableName, String sheetName) {
+    // ===================== CORE PARSING =====================
+
+    private ParsedFileData parseSheet(
+            Sheet sheet,
+            String originalFileName,
+            String fileType,
+            String tableName,
+            String sheetName
+    ) {
 
         Iterator<Row> rowIterator = sheet.iterator();
         if (!rowIterator.hasNext()) return null;
 
-        // First row = headers
         Row headerRow = rowIterator.next();
         List<String> originalHeaders = extractHeaders(headerRow);
         if (originalHeaders.isEmpty()) return null;
 
-        List<String> sanitizedHeaders = new ArrayList<>();
-        for (String h : originalHeaders) {
-            sanitizedHeaders.add(
-                TableNameSanitizer.sanitizeColumn(h));
-        }
+        List<String> sanitizedHeaders = originalHeaders.stream()
+                .map(TableNameSanitizer::sanitizeColumn)
+                .toList();
 
         DataFormatter formatter = new DataFormatter();
         List<Map<String, String>> rows = new ArrayList<>();
@@ -151,121 +131,143 @@ public class ExcelParserService implements FileParserService {
             if (isRowEmpty(row)) continue;
 
             Map<String, String> rowData = new LinkedHashMap<>();
+
             for (int i = 0; i < sanitizedHeaders.size(); i++) {
-                Cell cell = row.getCell(i,
-                    Row.MissingCellPolicy.RETURN_BLANK_AS_NULL);
+                Cell cell = row.getCell(i, Row.MissingCellPolicy.RETURN_BLANK_AS_NULL);
                 String value = extractCellValue(cell, formatter);
+
                 rowData.put(sanitizedHeaders.get(i),
-                    (value == null || value.trim().isEmpty())
-                        ? null : value.trim());
+                        (value == null || value.isBlank()) ? null : value.trim());
             }
+
             rows.add(rowData);
         }
 
         List<ColumnMetadata> columns = buildColumnMetadata(
-            originalHeaders, sanitizedHeaders, rows, sheetName);
+                originalHeaders, sanitizedHeaders, rows
+        );
 
         return ParsedFileData.builder()
                 .columns(columns)
                 .rows(rows)
-                .originalFileName(originalFileName +
-                    " [Sheet: " + sheetName + "]")
+                .originalFileName(originalFileName + " [Sheet: " + sheetName + "]")
                 .detectedFileType(fileType)
-                .sheetName(sheetName)  // add this field
+                .sheetName(sheetName)
                 .build();
     }
 
-    private boolean isSheetEmpty(Sheet sheet) {
-        if (sheet.getLastRowNum() <= 0) return true;
-        Row firstRow = sheet.getRow(sheet.getFirstRowNum());
-        return firstRow == null || firstRow.getLastCellNum() <= 0;
+    // ===================== HELPERS =====================
+
+    private boolean shouldSkipSheet(Workbook workbook, Sheet sheet, int index) {
+        return workbook.isSheetHidden(index)
+               || workbook.isSheetVeryHidden(index)
+               || isSheetEmpty(sheet);
+    }
+
+    private boolean isValid(ParsedFileData data) {
+        return data != null && !data.getRows().isEmpty();
+    }
+
+    private String stripExtension(String filename) {
+        return filename.replaceAll("\\.[^.]+$", "");
     }
 
     private List<String> extractHeaders(Row headerRow) {
         List<String> headers = new ArrayList<>();
+
         for (Cell cell : headerRow) {
-            String header = "";
-            if (cell.getCellType() == CellType.STRING) {
-                header = cell.getStringCellValue().trim();
-            }
+            String header = (cell.getCellType() == CellType.STRING)
+                    ? cell.getStringCellValue().trim()
+                    : "";
+
             headers.add(header.isEmpty()
-                ? "col_" + cell.getColumnIndex() : header);
+                    ? "col_" + cell.getColumnIndex()
+                    : header);
         }
         return headers;
     }
 
-    private String extractCellValue(Cell cell,
-                                     DataFormatter formatter) {
+    private String extractCellValue(Cell cell, DataFormatter formatter) {
         if (cell == null) return null;
-        switch (cell.getCellType()) {
-            case NUMERIC:
-                if (DateUtil.isCellDateFormatted(cell)) {
-                    return cell.getLocalDateTimeCellValue()
-                               .toLocalDate().toString();
+
+        return switch (cell.getCellType()) {
+            case NUMERIC -> DateUtil.isCellDateFormatted(cell)
+                    ? cell.getLocalDateTimeCellValue().toLocalDate().toString()
+                    : formatter.formatCellValue(cell);
+
+            case STRING -> cell.getStringCellValue();
+
+            case BOOLEAN -> String.valueOf(cell.getBooleanCellValue());
+
+            case FORMULA -> {
+                try {
+                    yield formatter.formatCellValue(cell);
+                } catch (Exception e) {
+                    yield cell.getCellFormula();
                 }
-                return formatter.formatCellValue(cell);
-            case STRING:
-                return cell.getStringCellValue();
-            case BOOLEAN:
-                return String.valueOf(cell.getBooleanCellValue());
-            case FORMULA:
-                try { return formatter.formatCellValue(cell); }
-                catch (Exception e) {
-                    return cell.getCellFormula(); }
-            default: return null;
-        }
+            }
+
+            default -> null;
+        };
     }
 
     private boolean isRowEmpty(Row row) {
         if (row == null) return true;
+
         for (Cell cell : row) {
-            if (cell != null &&
-                cell.getCellType() != CellType.BLANK)
+            if (cell != null && cell.getCellType() != CellType.BLANK) {
                 return false;
+            }
         }
         return true;
+    }
+
+    private boolean isSheetEmpty(Sheet sheet) {
+        if (sheet.getLastRowNum() <= 0) return true;
+
+        Row firstRow = sheet.getRow(sheet.getFirstRowNum());
+        return firstRow == null || firstRow.getLastCellNum() <= 0;
     }
 
     private List<ColumnMetadata> buildColumnMetadata(
             List<String> originalHeaders,
             List<String> sanitizedHeaders,
-            List<Map<String, String>> rows,
-            String sheetName) {
+            List<Map<String, String>> rows
+    ) {
 
         List<ColumnMetadata> columns = new ArrayList<>();
+
         for (int i = 0; i < sanitizedHeaders.size(); i++) {
-            String sanitized = sanitizedHeaders.get(i);
-            List<String> samples = new ArrayList<>();
-            for (Map<String, String> row : rows) {
-                String v = row.get(sanitized);
-                if (v != null) samples.add(v);
-                if (samples.size() >= 200) break;
-            }
+
+            String column = sanitizedHeaders.get(i);
+
+            List<String> samples = rows.stream()
+                    .map(r -> r.get(column))
+                    .filter(Objects::nonNull)
+                    .limit(200)
+                    .toList();
+
             columns.add(ColumnMetadata.builder()
-                    .columnName(sanitized)
+                    .columnName(column)
                     .originalName(originalHeaders.get(i))
                     .dataType(DataTypeInferrer.infer(samples))
                     .ordinalPosition(i)
                     .build());
         }
+
         return columns;
     }
 
-    private Workbook openWorkbook(MultipartFile file,
-                                   String mimeType)
-            throws IOException {
-        if ("application/vnd.ms-excel".equals(mimeType)) {
-            return new HSSFWorkbook(file.getInputStream());
-        }
-        return new XSSFWorkbook(file.getInputStream());
+    private Workbook openWorkbook(MultipartFile file, String mimeType) throws IOException {
+        return "application/vnd.ms-excel".equals(mimeType)
+                ? new HSSFWorkbook(file.getInputStream())
+                : new XSSFWorkbook(file.getInputStream());
     }
 
     private String detectSubtype(String filename) {
-        if (filename != null &&
-            filename.toLowerCase().endsWith(".xls")) {
+        if (filename != null && filename.toLowerCase().endsWith(".xls")) {
             return "application/vnd.ms-excel";
         }
-        return "application/vnd.openxmlformats-" +
-               "officedocument.spreadsheetml.sheet";
+        return "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet";
     }
-            }
+}
